--- a/report/initial_plan.tex
+++ b/report/initial_plan.tex
@@ -256,7 +256,7 @@ Finally, implementing different security options for OpenSSL would also be a pos
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.5]{workplan.png}
+\includegraphics[trim=400 0 400 0,scale=0.9]{workplan}
 \end{center}
 \caption{\textbf{Workplan table from the wiki}}
 \label{fig:workplan}
